--- a/main_app/templates/plant_list.html
+++ b/main_app/templates/plant_list.html
@@ -24,18 +24,43 @@
 
 <div class="gallery">
   {% for plant in plants %}
-  <a href="{% url 'plant_detail' plant.pk %}">
+  
     <div class="card">
       <div class="card-image">
         <figure class="image is-square">
-          <img src="{{plant.image}}" alt="{{plant.name}}" />
+          <a href="{% url 'plant_detail' plant.pk %}">
+            <img src="{{plant.image}}" alt="{{plant.name}}" />
+          </a>
         </figure>
       </div>
       <div class="card-header">
         <p class="card-header-title">{{plant.name}}</p>
       </div>
+
+      <span>
+        <div class="dropdown">
+            <div class="dropdown-trigger">
+                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                    <span>Add to Garden</span>
+                    <span class="icon is-small">
+                        <i class="fas fa-angle-down" aria-hidden="true"></i>
+                    </span>
+                </button>
+            </div>
+          
+            <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                <div class="dropdown-content">
+                    {% for garden in gardens %}
+                        <a href="{% url 'garden_plant_assoc' garden.pk plant.pk %}?assoc=add"
+                           class="dropdown-item">{{ garden.name }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </span>
+
     </div>
-  </a>
+  
 	{% empty %}
   <article class="message">
     <div class="message-header">
