--- a/main_app/templates/plant_list.html
+++ b/main_app/templates/plant_list.html
@@ -18,6 +18,8 @@
     </div>
   </div>
   <a class="button is-dark" href="{% url 'plant_create' %}">Add Plant</a>
+  <a class="button is-dark" href="{% url 'garden_create' %}">Add Garden</a>
+
   <!--  This anchor tag will redirect back to artist list without a query param -->
   <a class="button is-dark" href="{% url 'plant_list' %}">Clear Search</a>
 </form>
